Dark mode fix - @apply fix - themeToggle Err Hnadling

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -1,12 +1,13 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
 :root {
-  --background: #ffff;
+  --background: #fff;
   --foreground: #1717;
   /* direction: rtl; */
 }
 
-@theme inline {
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -18,6 +19,11 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+} */
+
+.dark {
+  --background: #0a0a0a;
+  --foreground: #ededed;
 }
 
 body {
@@ -25,6 +31,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .transition-max-height {
   transition: 0.3s ease-in-out;
   overflow: hidden;
